login fixes (still not working)

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,15 @@
 DATABASE_URL=postgres://dev:dev@localhost:5432/dev-db
+AUTH_SECRET="ttbc1In1tE5hUhkgVzIIp3lyDaDXhbtIxzuGn1KcTUU=" # Added by `npx auth`. Read more: https://cli.authjs.dev
 
-GITHUB_CLIENT_ID=*
-GITHUB_CLIENT_SECRET=*
-GOOGLE_CLIENT_ID=*
-GOOGLE_CLIENT_SECRET=*
+GITHUB_ID=Ov23liq2EQODdKHgnmQb
+GITHUB_SECRET=3d789ff756a147f65791e295de9f0a30076dc9bb
+
+GOOGLE_ID=944664875060-tnj6nlo4omvko6v7ufv2e780gb5ssm5r.apps.googleusercontent.com
+GOOGLE_SECRET=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
+
+#EMAIL 
+SMTP_USER=apikey
+SMTP_PASSWORD="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"
+SMTP_HOST=smtp.sendgrid.net
+SMTP_PORT=587
+EMAIL_FROM="benjaminkucler1@gmail.com"
