--- a/package.json
+++ b/package.json
@@ -48,15 +48,21 @@
 		"@auth/core": "^0.34.1",
 		"@auth/drizzle-adapter": "^1.4.1",
 		"@auth/sveltekit": "^1.4.1",
+		"@internationalized/date": "^3.5.5",
 		"@lucia-auth/adapter-drizzle": "^1.0.7",
 		"@types/bcryptjs": "^2.4.6",
 		"arctic": "^1.9.2",
 		"argon2": "^0.40.3",
 		"bcrypt": "^5.1.1",
 		"bcryptjs": "^2.4.3",
+		"bits-ui": "^0.21.12",
 		"clsx": "^2.1.1",
+		"cmdk-sv": "^0.0.18",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.32.0",
+		"formsnap": "^1.0.1",
+		"lucide-svelte": "^0.414.0",
+		"mode-watcher": "^0.4.0",
 		"nodemailer": "^6.9.14",
 		"postgres": "^3.4.4",
 		"tailwind-merge": "^2.4.0",
