--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"bits-ui": "^0.21.12",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.18",
+		"deepl-node": "^1.13.0",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.32.0",
 		"formsnap": "^1.0.1",
