--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.32.0",
 		"formsnap": "^1.0.1",
+		"levenshtein-edit-distance": "^3.0.1",
 		"lucide-svelte": "^0.414.0",
 		"mode-watcher": "^0.4.0",
 		"nodemailer": "^6.9.14",
